# JSynth

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  JSynth.cpp  JSynth.h  config.hpp  display.hpp  osc.hpp  voice.hpp
